--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@fontsource/roboto": "^4.5.5",
+    "@mui/material": "^5.6.1",
     "date-fns": "^2.28.0",
     "gray-matter": "^4.0.3",
     "next": "latest",
