--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@fontsource/roboto": "^4.5.5",
+    "@mui/icons-material": "^5.6.1",
     "@mui/material": "^5.6.1",
     "date-fns": "^2.28.0",
     "gray-matter": "^4.0.3",
@@ -16,6 +17,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "remark": "^14.0.2",
-    "remark-html": "^15.0.1"
+    "remark-html": "^15.0.1",
+    "sharp": "^0.30.3"
   }
 }
