--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mui/material": "^5.6.1",
     "date-fns": "^2.28.0",
     "gray-matter": "^4.0.3",
+    "mongodb": "^4.5.0",
     "next": "latest",
     "react": "17.0.2",
     "react-dom": "17.0.2",
