--- a/.env
+++ b/.env
@@ -2,7 +2,12 @@
 # 不管是development还是production，都会加载此文件的环境变量
 # 此文件应该存放环境变量默认值
 
+# 数据库连接配置
 DB_HOST = 127.0.0.1 
 DB_PORT = 27017 
 DB_USER = myuser
 DB_PASSWORD = mypassword
+
+# 数据库配置
+DB_NAME = liuli
+DB_COLLECTION = liuli_articles
